build landing page

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "^14.0.2",
     "@angular/router": "^14.0.2",
     "@caliatys/array-typer": "^1.0.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
@@ -28,6 +32,8 @@
     "angular-svg-icon": "^14.0.0",
     "bootstrap": "^5.2.2",
     "gretchen": "^1.5.0",
+    "ngx-carousel-3d": "^1.0.1",
+    "ngx-drag-scroll": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
