--- a/src/assets/img/favicon/manifest.json
+++ b/src/assets/img/favicon/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "EasyAngular",
-  "short_name": "EasyAngular",
+  "name": "Snatch",
+  "short_name": "Snatch",
   "theme_color": "#2b46c7",
   "background_color": "#2b46c7",
   "display": "standalone",
