--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular-svg-icon": "^14.0.0",
     "bootstrap": "^5.2.2",
     "gretchen": "^1.5.0",
+    "jquery": "^3.6.1",
     "ngx-drag-scroll": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
