--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build — prod",
+    "heroku-postbuild": "ng build --prod",
     "add-page": "ng g m pages/page-name --routing && ng g component pages/page-name --skip-tests"
   },
   "private": true,
