update spin component

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,11 @@
             "styles": [
               "src/assets/scss/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/gsap/src/minified/TimelineMax.min.js",
+              "node_modules/gsap/src/minified/TweenMax.min.js",
+              "src/assets/JS/Winwheel.js"
+            ]
           },
           "configurations": {
             "production": {
