--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
             "scripts": [
               "node_modules/gsap/src/minified/TimelineMax.min.js",
               "node_modules/gsap/src/minified/TweenMax.min.js",
-              "src/assets/JS/Winwheel.js"
+              "src/assets/js/Winwheel.min.js"
             ]
           },
           "configurations": {
