--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@angular/compiler": "^14.0.2",
     "@angular/core": "^14.0.2",
     "@angular/forms": "^14.0.2",
-    "@angular/material": "^14.0.2",
     "@angular/localize": "^14.0.2",
+    "@angular/material": "^14.0.2",
     "@angular/platform-browser": "^14.0.2",
     "@angular/platform-browser-dynamic": "^14.0.2",
     "@angular/router": "^14.0.2",
@@ -42,6 +42,7 @@
     "gretchen": "^1.5.0",
     "gsap": "^2.1.3",
     "jquery": "^3.6.1",
+    "ng-otp-input": "^1.8.5",
     "ngx-drag-scroll": "^14.0.1",
     "ngx-infinite-scroll": "^7.0.0",
     "ngx-scrollbar": "^10.0.1",
