--- a/package.json
+++ b/package.json
@@ -42,15 +42,16 @@
     "express": "^4.18.2",
     "gretchen": "^1.5.0",
     "gsap": "^2.1.3",
-    "jquery": "^3.6.1",
+    "jquery": "^3.6.3",
     "ng-apexcharts": "^1.7.4",
     "ng-otp-input": "^1.8.5",
-    "ngx-drag-scroll": "^14.0.1",
     "ngx-infinite-scroll": "^7.0.0",
     "ngx-scrollbar": "^10.0.1",
+    "ngx-slick-carousel": "^0.6.0",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "scratchcard-js": "^1.4.10",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
